--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -53,7 +53,8 @@ header {
     position: relative;
     background-color: black;   
     padding: 15px; 
-    transition: all 0.4s linear;
+    transition: all 0.4s linear;    
+    cursor: pointer;
 }
 
 .mensagem a {
@@ -128,4 +129,28 @@ i {
     display: block;
     line-height: 20px;
     font-size: 1rem;
+}
+
+.section--about {
+    min-width: 100%;
+    height: 75vh;
+    background-image: url("https://images01.nicepage.io/46/3f/463fe4d78f76c10c34bdbe2f68367509.jpeg");
+    object-fit: cover;
+    background-size: cover;
+    background-position: 50% 16.72%;
+    background-repeat: no-repeat;
+    overflow: visible;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container--about {
+    max-width: 1200px;
+}
+
+.container--about .conteudo {
+
+    display: flex;
+    flex-direction: column;
 }
